# carewise-production-backend

./: .dockerignore  .env.example  .env.production.example  .gitignore  Dockerfile  GITHUB_UPLOAD_STEPS.md  PUBLISHING_CHECKLIST.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: backend-ci.yml  deploy-smoke.yml
app/: __init__.py  main.py
app/core/: config.py  crypto.py  rbac.py  security.py
app/db/: init_db.py  migrate.py  session.py
app/models/: __init__.py  carewise.py
app/schemas/: __init__.py  carewise.py
app/services/: access_control.py  audit.py  care_plan.py  clinical_review.py  email_delivery.py  queue.py  rate_limit.py  safety.py  security_headers.py  storage.py  telemetry.py
app/workers/: __init__.py  tasks.py  worker.py
deploy/: cloud_deployment.md  github-actions-backend-ci.yml
deploy/aws/: ecs-task-definition.json
deploy/fly/: fly.toml
deploy/gcp/: cloud-run-service.yaml
deploy/render/: render.yaml
deploy/storage/: aws-s3.md  cloudflare-r2.md
load-tests/: k6-carewise.js  locustfile.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_product_systems.py  0003_report_file_storage.py  0004_data_deletion_requests.py  0005_password_reset_tokens.py  0006_rate_limit_buckets.py  0007_refresh_tokens.py  0008_email_verification.py  0009_lab_trends.py
scripts/: check_storage.py  generate_secrets.py  smoke_test_deploy.py
security/: clinical_review_workflow.md  privacy_review.md  scale_guardrail_check.md
tests/: conftest.py  static_readiness_check.py
(+23 files in other folders)
